# mimic

./: .envrc  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_all.py
artifacts/features/: selected_features.json
deploy_min/: app.py
docs/: EICU_EXTRACTION_GUIDE.md  EXTRACTION_ALIGNMENT.md  FIGURES_TABLES_LEGENDS_SUMMARY.md  FLOWCHART_COUNTS.md  MANUSCRIPT_METHODS.md  MANUSCRIPT_RESULTS.md  PF_RATIO_ANALYSIS.md  TABLE1_FLOW.md
docs/supplementary/: S1_LASSO_Feature_Selection.docx  S2_Internal_Validation.docx  S3_Diagnostic_Performance_and_Interpretability.docx
mimic/: __init__.py
results/: MANIFEST.md
scripts/: collect_legends.py  gen_sf4b_sf5b_legends.py
scripts/audit_eval/: 03_table1_baseline.py  04_mimic_stat_audit.py  04b_fig1_study_overview.py  09_cross_cohort_audit.py  10_external_validation_perf.py  10b_external_validation_slim.py  10c_full_vs_slim_dual_domain.py  11_model_interpretation_shap.py  12_clinical_calibration_dca.py  13_nomogram_odds_ratio.py  20_build_supplementary_docx.py
scripts/modeling/: 05_feature_selection_lasso.py  06_model_training_main.py  06b_xgb_internal_feature_pruning.py  06c_shap_bootstrap_feature_pruning.py  07_optimal_cutoff_analysis.py
scripts/preprocess/: 01_mimic_cleaning.py  02_mimic_standardization.py  08_eicu_alignment_cleaning.py
scripts/sql/: 01_mimic_extraction.sql  01_mimic_flowchart_counts.sql  08_eicu_extraction.sql  08_eicu_flowchart_counts.sql
scripts/utils/: __init__.py  deploy_utils.py  feature_formatter.py  logger.py  paths.py  (+6 more)
validation/: eicu_vs_mimic_drift.json
(+224 files in other folders)
