[project]
name = "mimic"
version = "0.1.0"
description = "MIMIC-IV / eICU acute pancreatitis analysis"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<2",
    "pandas",
    "streamlit",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "joblib",
    "shap",
    "dcurves",
    "xgboost",
    "optuna",
    "tableone",
    "numba>=0.59",
    "llvmlite>=0.42",
    "python-docx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimic"]
